# asxp

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug.yml  interop.yml  rfc.yml
.github/workflows/: conformance.yml  pages.yml
demo/: app.js  index.html  styles.css
docs/: explainer.html  index.html
docs/demo/: app.js  index.html
examples/: customer-support.skill.md  linked-policy.skill.md
examples/v0.2/refund-policy/: SKILL.md  asxp.json
launch/: CHECKLIST.md  agent-skills-discussion.md  implementers-issue.md  mcp-wg-intro.md  release-notes-v0.2.0.md  show-hn.md  social.md
rfcs/: 0000-template.md
schemas/: package.schema.json  skill-manifest.schema.json  tool.schema.json
scripts/: publish_github.sh  publish_outreach.sh  run_tck.py
spec/: ASXP-0.2.md  ASXP-KO.md  ASXP.md  compatibility.csv  openapi.yaml
src/asxp/: __init__.py  cli.py  core.py  package.py
tck/: README.md  result.schema.json
tests/: test_core.py  test_package.py
