[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asxp"
version = "0.1.0"
description = "Reference tools for the Agent Skill Exchange Protocol"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}

[project.scripts]
asxp = "asxp.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
